--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "numpy (>=2.3.5,<3.0.0)",
     "plotly (>=6.5.0,<7.0.0)",
     "requests (>=2.32.5,<3.0.0)",
-    "nbformat (>=5.10.4,<6.0.0)"
+    "nbformat (>=5.10.4,<6.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)"
 ]
 
 
