--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,10 @@ dependencies = [
     "plotly (>=6.5.0,<7.0.0)",
     "requests (>=2.32.5,<3.0.0)",
     "nbformat (>=5.10.4,<6.0.0)",
-    "openpyxl (>=3.1.5,<4.0.0)"
+    "openpyxl (>=3.1.5,<4.0.0)",
+    "statsmodels (>=0.14.5,<0.15.0)",
+    "notebook (>=7.5.0,<8.0.0)",
+    "pandoc (>=2.4,<3.0)"
 ]
 
 
