--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "openpyxl (>=3.1.5,<4.0.0)",
     "statsmodels (>=0.14.5,<0.15.0)",
     "notebook (>=7.5.0,<8.0.0)",
-    "pandoc (>=2.4,<3.0)"
+    "pandoc (>=2.4,<3.0)",
+    "tdqm (>=0.0.1,<0.0.2)"
 ]
 
 
