finished SVM module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "statsmodels (>=0.14.5,<0.15.0)",
     "notebook (>=7.5.0,<8.0.0)",
     "pandoc (>=2.4,<3.0)",
-    "tdqm (>=0.0.1,<0.0.2)"
+    "tdqm (>=0.0.1,<0.0.2)",
+    "imblearn (>=0.0,<0.1)"
 ]
 
 
