--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "pandoc (>=2.4,<3.0)",
     "tdqm (>=0.0.1,<0.0.2)",
     "imblearn (>=0.0,<0.1)",
-    "pydotplus (>=2.0.2,<3.0.0)"
+    "pydotplus (>=2.0.2,<3.0.0)",
+    "xgboost (>=3.1.2,<4.0.0)"
 ]
 
 
