Finished all labs and practice session, on to final project for classification course

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,9 @@ dependencies = [
     "tdqm (>=0.0.1,<0.0.2)",
     "imblearn (>=0.0,<0.1)",
     "pydotplus (>=2.0.2,<3.0.0)",
-    "xgboost (>=3.1.2,<4.0.0)"
+    "xgboost (>=3.1.2,<4.0.0)",
+    "lime (>=0.2.0.1,<0.3.0.0)",
+    "imbalanced-learn (>=0.14.1,<0.15.0)"
 ]
 
 
