Started course unsupervised learning, finished module 1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "xgboost (>=3.1.2,<4.0.0)",
     "lime (>=0.2.0.1,<0.3.0.0)",
     "imbalanced-learn (>=0.14.1,<0.15.0)",
-    "eli5 (>=0.16.0,<0.17.0)"
+    "eli5 (>=0.16.0,<0.17.0)",
+    "pillow (>=12.0.0,<13.0.0)"
 ]
 
 
