--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "scikit-learn (>=1.7.2,<2.0.0)",
     "scipy (>=1.16.3,<2.0.0)",
     "matplotlib (>=3.10.7,<4.0.0)",
-    "numpy (>=2.3.5,<3.0.0)",
+    "numpy (>=2.2.0,<3.0.0)",
     "plotly (>=6.5.0,<7.0.0)",
     "requests (>=2.32.5,<3.0.0)",
     "nbformat (>=5.10.4,<6.0.0)",
@@ -29,7 +29,10 @@ dependencies = [
     "lime (>=0.2.0.1,<0.3.0.0)",
     "imbalanced-learn (>=0.14.1,<0.15.0)",
     "eli5 (>=0.16.0,<0.17.0)",
-    "pillow (>=12.0.0,<13.0.0)"
+    "pillow (>=12.0.0,<13.0.0)",
+    "polars (>=1.36.1,<2.0.0)",
+    "altair (>=6.0.0,<7.0.0)",
+    "opencv-python (>=4.12.0.88,<5.0.0.0)"
 ]
 
 
