--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "pillow (>=12.0.0,<13.0.0)",
     "polars (>=1.36.1,<2.0.0)",
     "altair (>=6.0.0,<7.0.0)",
-    "opencv-python (>=4.12.0.88,<5.0.0.0)"
+    "opencv-python (>=4.12.0.88,<5.0.0.0)",
+    "pyarrow (>=22.0.0,<23.0.0)"
 ]
 
 
