Almost finished with module 4 of unsupervised learning

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,9 @@ dependencies = [
     "polars (>=1.36.1,<2.0.0)",
     "altair (>=6.0.0,<7.0.0)",
     "opencv-python (>=4.12.0.88,<5.0.0.0)",
-    "pyarrow (>=22.0.0,<23.0.0)"
+    "pyarrow (>=22.0.0,<23.0.0)",
+    "sympy (>=1.14.0,<2.0.0)",
+    "great-tables (>=0.20.0,<0.21.0)"
 ]
 
 
