--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ dependencies = [
     "opencv-python (>=4.12.0.88,<5.0.0.0)",
     "pyarrow (>=22.0.0,<23.0.0)",
     "sympy (>=1.14.0,<2.0.0)",
-    "great-tables (>=0.20.0,<0.21.0)"
+    "great-tables (>=0.20.0,<0.21.0)",
+    "folium (>=0.20.0,<0.21.0)"
 ]
 
 
