--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ dependencies = [
     "seaborn (>=0.13.2,<0.14.0)",
     "scikit-learn (>=1.7.2,<2.0.0)",
     "scipy (>=1.16.3,<2.0.0)",
-    "matplotlib (>=3.10.7,<4.0.0)",
     "numpy (>=2.2.0,<3.0.0)",
     "plotly (>=6.5.0,<7.0.0)",
     "requests (>=2.32.5,<3.0.0)",
@@ -36,7 +35,9 @@ dependencies = [
     "pyarrow (>=22.0.0,<23.0.0)",
     "sympy (>=1.14.0,<2.0.0)",
     "great-tables (>=0.20.0,<0.21.0)",
-    "folium (>=0.20.0,<0.21.0)"
+    "folium (>=0.20.0,<0.21.0)",
+    "matplotlib (>=3.10.8,<4.0.0)",
+    "factor-analyzer (>=0.5.1,<0.6.0)",
 ]
 
 
